--- a/src/components/search/index.module.css
+++ b/src/components/search/index.module.css
@@ -1,7 +1,15 @@
+.pageName {
+  max-width: 1120px;
+  margin: auto;
+  display: block;
+  padding: 5px 40px;
+  color: rgb(60, 57, 232);
+}
+
 .search {
   padding: 40px;
   background-image: radial-gradient(rgb(208, 99, 233) 12%, transparent 12%),
-      radial-gradient(rgb(60, 57, 232) 12%, transparent 12%);
+    radial-gradient(rgb(60, 57, 232) 12%, transparent 12%);
   background-color: #ffffff;
   background-position: 30px 30px, 50px 50px;
   background-size: 40px 40px;
@@ -26,13 +34,13 @@
 }
 .search input::-webkit-input-placeholder {
   color: rgb(17, 189, 166);
-} 
+}
 .search input::-moz-placeholder {
   color: rgb(17, 189, 166);
 }
 .search input:focus::-webkit-input-placeholder {
   color: rgb(149, 225, 215);
-} 
+}
 .search input:focus::-moz-placeholder {
   color: rgb(149, 225, 215);
 }
