--- a/src/components/modal/index.css
+++ b/src/components/modal/index.css
@@ -2,6 +2,16 @@
   display: none;
 }
 
+.modal__cancel {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 35px;
+  width: 35px;
+  background: url(../../img/modal_cancel.png) center / contain no-repeat;
+  cursor: pointer;
+}
+
 .modal_active {
   height: 100vh;
   width: 100%;
@@ -12,9 +22,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
-.modal__content {
+.modal__content_form-info {
+  position: relative;
   border-radius: 20px;
   background: #fff;
   height: 200px;
@@ -22,9 +34,80 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: auto;
 }
 
 .content {
   font-size: 25px;
   color: rgb(26, 26, 26);
+  background: #fff;
+}
+
+/* for article */
+
+.modal__content_article {
+  position: relative;
+  padding: 20px;
+  width: 700px;
+  height: 340px;
+  background: #fff;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: auto;
+}
+
+.article-card {
+  display: flex;
+  gap: 20px;
+}
+
+.article-card img {
+  border-radius: 20px;
+  width: 300px;
+  height: 200px;
+}
+
+.article-card__source {
+  margin-top: 10px;
+  background: rgb(17, 189, 166);
+  border-radius: 40px;
+  color: #fff;
+  font-size: 16px;
+  height: 21px;
+  display: inline-block;
+  text-align: right;
+  padding: 5px 10px 0;
+}
+
+.article-card__url {
+  margin-top: 5px;
+  margin-left: 5px;
+  text-decoration:none;
+  display: block;
+}
+
+.article-card__content_right {
+  position: relative;
+}
+
+.article-card__date {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-right: 20px;
+  font-size: 15px;
+  color: rgb(76, 76, 76);
+}
+
+.article-card__header {
+  font-size: 30px;
+  color: rgb(26, 26, 26);
+}
+
+.article_card__content {
+  margin-top: 10px;
+  font-size: 18px;
+  color: rgb(49, 49, 49);
 }
