--- a/src/components/APICards/index.module.css
+++ b/src/components/APICards/index.module.css
@@ -3,6 +3,20 @@
   min-height: calc(100vh - 242px);
 }
 
+.warning {
+  background: #fff;
+  width: 400px;
+  height: 100px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 50px;
+  text-align: center;
+  font-size: 16px;
+  color: rgb(76, 76, 76);
+}
+
 .newsCards {
   max-width: 1200px;
   margin: auto;
@@ -20,6 +34,11 @@
   width: 290px;
   height: 420px;
   padding: 15px;
+}
+
+.imgWrapper {
+  height: 165px;
+  width: 100%;
 }
 
 .newsCard img {
