refactor: add games api

--- a/src/components/APICards/index.module.css
+++ b/src/components/APICards/index.module.css
@@ -32,7 +32,7 @@
   background: #fff;
   border-radius: 20px;
   width: 290px;
-  height: 420px;
+  height: 280px;
   padding: 15px;
 }
 
@@ -67,14 +67,14 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 220px;
+  height: 80px;
 }
 
 .newsContent .newsDate {
   font-size: 15px;
   color: rgb(76, 76, 76);
   position: absolute;
-  right: 0;
+  left: 0;
   bottom: 0;
 }
 
