--- a/src/components/modal/index.css
+++ b/src/components/modal/index.css
@@ -43,9 +43,9 @@
   background: #fff;
 }
 
-/* for article */
+/* for games */
 
-.modal__content_article {
+.modal__content_game {
   position: relative;
   padding: 20px;
   width: 700px;
@@ -58,19 +58,26 @@
   cursor: auto;
 }
 
-.article-card {
+.game-card__content_left {
+  position: relative;
+}
+
+.game-card {
+  padding: 0 20px;
   display: flex;
   gap: 20px;
 }
 
-.article-card img {
+.game-card img {
   border-radius: 20px;
   width: 300px;
   height: 200px;
 }
 
-.article-card__source {
-  margin-top: 10px;
+.game-card__source {
+  position: absolute;
+  bottom: 15px;
+  left: 10px;
   background: rgb(17, 189, 166);
   border-radius: 40px;
   color: #fff;
@@ -81,18 +88,19 @@
   padding: 5px 10px 0;
 }
 
-.article-card__url {
+.game-card__url {
   margin-top: 5px;
   margin-left: 5px;
   text-decoration: none;
   display: block;
 }
 
-.article-card__content_right {
+.game-card__content_right {
   position: relative;
+  width: 350px;
 }
 
-.article-card__date {
+.game-card__date {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -101,13 +109,19 @@
   color: rgb(76, 76, 76);
 }
 
-.article-card__header {
+.game-card__header {
   font-size: 30px;
   color: rgb(26, 26, 26);
 }
 
-.article_card__content {
+.game-card__years-cancel {
+  padding: 0 10px;
   margin-top: 10px;
   font-size: 18px;
   color: rgb(49, 49, 49);
+}
+
+.game-card__genres {
+  padding: 20px 30px;
+  color: rgb(26, 26, 26);
 }
