--- a/src/components/gameWarning/index.module.css
+++ b/src/components/gameWarning/index.module.css
@@ -3,6 +3,7 @@
   width: 370px;
   height: 100px;
   border-radius: 20px;
+  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
