--- a/src/components/layout/index.module.css
+++ b/src/components/layout/index.module.css
@@ -5,7 +5,7 @@
 
 .headerWrapper header {
   height: 25px;
-  width: 190px;
+  width: 240px;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -23,6 +23,6 @@
   border-bottom: 2px solid rgb(235, 143, 255);
 }
 
-.headerWrapper .active-link {
+/* .headerWrapper .active-link {
   color: red;
-}
+} */
