--- a/src/components/modal/index.css
+++ b/src/components/modal/index.css
@@ -66,6 +66,9 @@
   padding: 0 20px;
   display: flex;
   gap: 20px;
+  background: #fff;
+  padding: 60px 40px;
+  border-radius: 20px;
 }
 
 .game-card img {
